--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="collumn description">
                     <p>
                         The Beware of the App is a person passionated by developing in its spare time to create light Android apps.
-                        Troubled with actual monetization model based in ads and microtransactions I seek to develop tiny apps that solves simple day-to-day problems with no ads and no microtransactions. But if you like it you can donate me!
+                        Troubled with current monetization model based in ads and microtransactions I seek to develop tiny apps that solves simple day-to-day problems with no ads and no microtransactions. But if you like it you can donate me!
                     </p>
                     <p>I also do custom development and commercial applications under monthly license.</p>
                 </div>
