--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="collumn description">
                     <p>
                         A Beware of the App é uma pessoa apaixonada por desenvolvimento utilizando de seu tempo livre para desenvolver pequenas aplicações Android.
-                        Incomodado com os modelos atuais de monetização baseados em anúncios e microtransações, busco desenvolver aplicativos que resolvam pequenos problemas, sem propaganda, sem micritransações. Mas se você curtir pode me fazer uma doação!
+                        Incomodado com os modelos atuais de monetização baseados em anúncios e microtransações, busco desenvolver aplicativos que resolvam pequenos problemas, sem propaganda, sem microtransações. Mas se você curtir pode me fazer uma doação!
                     </p>
                     <p>Há também desenvolvimento sob medida e aplicações comerciais sob licença mensal.</p>
                 </div>
