--- a/index.html
+++ b/index.html
@@ -1,60 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+		<title>enduro.js page</title>
+		<link rel="stylesheet" href="./assets/css/main.css">
+		<meta charset="utf-8">
+	</head>
+	<body>
+			<section class="screen white" style="background-image: url('./assets/img/admiring_board.jpg');">
+				<div class="center_block wt-alpha-bg padded-round-box">
+					<p class="huge">Beware of the App</p>
+					<p>Oops! Ainda estamos sem conteúdo...</p>
+				</div>
+				<div class="bottom_block vertical_pulsate highlight padded-top-round-box white-bg">
+					<p><strong>Veja mais sobre nós ↓</strong></p>
+				</div>
+			</section>
 
-        <link rel="stylesheet" href="style.css" />
 
-        <!-- Google Fonts -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+			<section class="screen half color1 v-padding">
+				<div class="contained">
+					<header class="huge">Sobre</header>
+					<p>O Beware of the App é um projeto pessoal no qual o autor busca desenvolver em seu tempo livre um material de qualidade no ensino de desenvolvimento em geral. Inicialmente traremos noções básicas de programação e iremos progredindo aos poucos possibilitando um desenvolvimento completo de qualquer pessoa no básico da lógica e programação.</p>
+<p>Você pode ficar antenado sobre quando chega nosso conteúdo através de nosso <a href="/feed">feed</a>.</p>
+<p>Até mais!</p>
 
-        <!-- CSS Reset -->
-        <link rel="stylesheet" href="https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+				</div>
+			</section>
 
-        <!-- Milligram CSS minified -->
-        <link rel="stylesheet" href="https://cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+		<footer class="screen quarter color3 white">
+			<div class="contained">
+				<ul>
+					<li><b>Beware of the App &copy;</b></li>
+					<li><b>Por</b> Davi Diório Mendes</li>
+					<li>Desenvolvido com <b>endurojs</b></li>
+					<li>Hospedado em <b>GitHub pages</b></li>
+				</ul>
+			</div>
+		</footer>
+	</body>
 
-        <title>BotApp</title>
-    </head>
-    <body>
-
-        <nav class="topbar padded">
-            <h3 class="brandname">Beware of the App</h3>
-        </nav>
-
-        <div class="content padded">
-
-            <div class="row">
-                <div class="collumn description">
-                    <p>
-                        A Beware of the App é uma pessoa apaixonada por desenvolvimento utilizando de seu tempo livre para desenvolver pequenas aplicações Android.
-                        Incomodado com os modelos atuais de monetização baseados em anúncios e microtransações, busco desenvolver aplicativos que resolvam pequenos problemas, sem propaganda, sem microtransações. Mas se você curtir pode me fazer uma doação!
-                    </p>
-                    <p>Há também desenvolvimento sob medida e aplicações comerciais sob licença mensal.</p>
-                </div>
-                <div class="collumn description">
-                    <p>
-                        The Beware of the App is a person passionated by developing in its spare time to create light Android apps.
-                        Troubled with current monetization model based in ads and microtransactions I seek to develop tiny apps that solves simple day-to-day problems with no ads and no microtransactions. But if you like it you can donate me!
-                    </p>
-                    <p>I also do custom development and commercial applications under monthly license.</p>
-                </div>
-            </div>
-
-            <p>Sorry we have no apps yet :(<br/>
-            But DON'T PANIC! The apps are comming! xD</p>
-
-        </div>
-
-        <footer class="padded">
-            <ul class="footer-data">
-                <li><strong>Beware of the App</strong></li>
-                <li>Davi Diório Mendes</li>
-                <li>Phone: +55 19 98324 9323</li>
-                <li><a href="mailto:ddioriomendes@gmail.com">ddioriomendes@gmail.com</a></li>
-            </ul>
-        </footer>
-    </body>
 </html>
-
